# znote

./: .gitignore  Cargo.toml  GEMINI.md  LICENSE  Makefile  README.md  SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: git_commit_message_format.md  hooks.md  search.md
examples/: config.yaml
examples/bookmarks/: 0da3b27d-1288-4553-8a95-c237b2894959.md  c1a2b3d4-5678-90ab-cdef-123456789012.md
examples/notes/: 886a5bea-1234-4567-8901-23456789abcd.md  8a7b6c5d-4e3f-2a1b-0c9d-8e7f6a5b4c3d.md  f3e5b1a9-7c8d-4e2f-b6a1-0d3c5e8f9ab2.md
examples/tasks/: e5f6g7h8-9012-3456-7890-abcdef123456.md
examples/znote/.dolt/noms/: journal.idx  manifest  vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
src/: hooks.rs  main.rs  tests.rs
src/commands/: mod.rs
src/handlers/: agent.rs  bookmark.rs  completions.rs  config.rs  dolt.rs  graph.rs  mod.rs  note.rs  query.rs  search.rs  serve.rs  task.rs  validate.rs  wiki.rs
src/models/: bookmark.rs  mod.rs  note.rs  task.rs
src/storage/: dolt.rs  mod.rs
ui/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/: EmbeddedEntity.tsx  EntityIcon.tsx  TagPill.tsx  TaskItem.tsx  TimeToggle.tsx
ui/src/components/layout/: CommandPalette.tsx  Layout.tsx  Sidebar.tsx  TopNav.tsx
ui/src/components/views/: EntityListView.tsx  EntityView.tsx  GraphView.tsx  TagResultsView.tsx
ui/src/lib/: api.ts
