[package]
name = "znote"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
clap_complete = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
anyhow = "1.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
regex = "1.9"
walkdir = "2.3"
tempfile = "3.8"
termimad = "0.34.1"
url = "2.5.8"
axum = { version = "0.8.1" }
tokio = { version = "1.35", features = ["full"] }
rust-embed = { version = "8.2" }
mime_guess = { version = "2.0" }
tower-http = { version = "0.6", features = ["fs", "trace", "compression-full", "cors"] }

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
